# tap-nomad

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_nomad/: __init__.py  client.py  tap.py
tests/: __init__.py  test_core.py
