[tool.poetry]
name = "tap-nomad"
version = "0.0.2"
description = "`tap-nomad` is a Singer tap for Nomad, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Felippe Felisola"]
keywords = [
    "ELT",
    "Nomad",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
singer-sdk = { version="^0.21.0"}
fs-s3fs = { version = "^1.1.1", optional = true}
pandas = "^1.5.3"
tabula = "^1.0.5"
tabula-py = "^2.7.0"
boto3 = "^1.28.25"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
darglint = "^1.8.1"
black = "^23.1.0"
pyupgrade = "^3.3.1"
mypy = "^1.0.0"
isort = "^5.11.5"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_nomad"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-nomad = 'tap_nomad.tap:TapNomad.cli'
